# claudway

./: .gitignore  README.md  demo.tape  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
claudway/: app.py  settings.py
claudway/commands/: set_repo.py  start.py  startup.py
demo/: README.md  demo.tape
headway_dev/: app.py  settings.py
headway_dev/commands/: set_repo.py  start.py  startup.py
src/: app.py  settings.py
src/commands/: cleanup.py  git.py  picker.py  remove.py  set_command.py  set_repo.py  shell.py  start.py  startup.py  status.py  switch.py  worktree.py
tests/: test_helpers.py
tests/commands/: test_cleanup.py  test_git.py  test_persistent.py  test_shell.py  test_worktree.py
