[project]
name = "claudway"
version = "0.1.0"
description = "An isolated dev environment for working with AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic-settings>=2.12.0", "typer>=0.21.1"]

[project.scripts]
cw = "claudway.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.37.4", "ruff>=0.15.0"]
