[project]
name = "claudway"
version = "0.1.0"
description = "An isolated dev environment for working with AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["InquirerPy>=0.3.4", "pydantic>=2.0.0", "tomli-w>=1.0.0", "typer>=0.21.1"]

[project.scripts]
cw = "src.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.38.1", "pytest>=9.0.2", "ruff>=0.15.1"]
