[project]
name = "claudway"
version = "0.1.0"
description = "Isolated dev environments powered by git worktrees, tailor-made for AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "inquirerpy>=0.3.4",
  "pydantic>=2.12.5",
  "tomli-w>=1.2.0",
  "typer>=0.24.0",
]

[project.scripts]
cw = "src.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.38.1", "pytest>=9.0.2", "ruff>=0.15.1"]
